# Chameleon_SRE

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.sh
docs/: k8s-troubleshooting.md
k8s/: configmap.yaml  deployment.yaml  rbac.yaml
models/: __init__.py  model_config.yaml  ollama_client.py
rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
scripts/: __init__.py  ingest_docs.py  test_k8s.py
src/: __init__.py  agent.py  config.py  ingest_docs.py  main.py  prompts.py  state.py  tools.py  utils.py
tests/: __init__.py  test_agent.py  test_tools.py
